feat: dismiss validations (#5756)
* feat: dismiss validations
