# packages/backend/src/generated/swagger.json
@@ -2621,6 +2621,17 @@
                 },
                 "required": ["results", "status"],
                 "type": "object"
+            },
+            "ApiValidationDismissResponse": {
+                "properties": {
+                    "status": {
+                        "type": "string",
+                        "enum": ["ok"],
+                        "nullable": false
+                    }
+                },
+                "required": ["status"],
+                "type": "object"
             }
         },
         "securitySchemes": {
@@ -2639,7 +2650,7 @@
     },
     "info": {
         "title": "Lightdash API",
-        "version": "0.598.4",
+        "version": "0.600.0",
         "description": "Open API documentation for all public Lightdash API endpoints",
         "license": {
             "name": "MIT"
@@ -4975,6 +4986,48 @@
                         "required": false,
                         "schema": {
                             "type": "boolean"
+                        }
+                    }
+                ]
+            }
+        },
+        "/api/v1/projects/{projectUuid}/validate/{validationId}": {
+            "delete": {
+                "operationId": "DeleteValidationDismiss",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ApiValidationDismissResponse"
+                                }
+                            }
+                        }
+                    },
+                    "default": {
+                        "description": "Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ApiErrorPayload"
+                                }
+                            }
+                        }
+                    }
+                },
+                "description": "Deletes a single validation error.",
+                "tags": ["Projects"],
+                "security": [],
+                "parameters": [
+                    {
+                        "description": "the projectId for the validation",
+                        "in": "path",
+                        "name": "validationId",
+                        "required": true,
+                        "schema": {
+                            "format": "double",
+                            "type": "number"
                         }
                     }
                 ]
